# flash-algorithm

./: Cargo.toml  README.md  build.rs  memory.x
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
